# microwave

./: .gitreview  CMakeLists.txt  README.md  microwave.cpp  microwave.hpp  microwaveTest.cpp
OddEvenPartitioner/: OddEvenPartitioner.cpp  README.md
num2textConverter/: solution.cpp
text2numConverter/: README.md  solution.cpp
